<resources>
    <string name="app_name">RtkTvApiService</string>
    <string name="service_remote">AIDL</string>
    <string name="service_local">Messenger &amp; Broadcast</string>
    <string name="plus">+</string>
    <string name="equal">= 0</string>
    <string name="sum">Sum: %d</string>
    <string name="equal_regex">= %d</string>
    <string name="show_menu">Show Menu</string>
    <string name="two_level_menu">2 Level Menu</string>
    <string name="sum_of_numbers">Sum Of 2 Numbers</string>
    <string name="record_not_found">Record not found.</string>
    <string name="regex_menu">%s (%d)</string>
    <string name="regex_string">%s</string>


    <string name="service_label_local">Local Service</string>
    <string name="service_label">Service label</string>
    <string name="service_connected">Service connected</string>
    <string name="service_disconnected">Service disconnected</string>

    <string name="service_disconnected_unexpected">Service has unexpectedly disconnected</string>
    <string name="service_started">Service has started</string>
    <string name="service_stopped">Service has stopped</string>
    <string name="service_null">Service is null</string>
    <string name="service_bind">Service bind</string>
    <string name="service_unbind">Service unbind</string>
    <string name="service_not_bind">Service not bind</string>

</resources>