<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/etVal1"
            android:imeOptions="actionNext"
            style="@style/editTextNumber"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/lay"
            app:layout_constraintTop_toTopOf="@id/lay"
            app:layout_constraintBottom_toBottomOf="@id/lay"/>

        <TextView
            android:id="@+id/lblPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            style="@style/label_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/etVal1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/etVal2"
            android:imeOptions="actionDone"
            style="@style/editTextNumber"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/lay"
            app:layout_constraintLeft_toRightOf="@id/lblPlus"
            app:layout_constraintTop_toTopOf="@id/lay"/>


        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            style="@style/label_number"
            app:layout_constraintLeft_toRightOf="@id/etVal2"
            app:layout_constraintBottom_toBottomOf="@id/lay"
            app:layout_constraintTop_toTopOf="@id/lay" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_standard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay">
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_local"
            android:onClick="onClick"
            style="@style/button_add"
            app:layout_constraintLeft_toLeftOf="@id/layButton"
            app:layout_constraintTop_toTopOf="@id/layButton"
            app:layout_constraintBottom_toBottomOf="@id/layButton"/>
        <Button
            android:layout_marginLeft="@dimen/padding_medium"
            android:id="@+id/btnAIDL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/service_remote"
            style="@style/button_add"
            android:onClick="onClick"
            app:layout_constraintLeft_toRightOf="@id/btnEqual"
            app:layout_constraintTop_toTopOf="@id/layButton"
            app:layout_constraintBottom_toBottomOf="@id/layButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnMenu"
        android:text="@string/show_menu"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.9"
        style="@style/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>